--- a/gtas-parent/gtas-webapp/pom.xml
+++ b/gtas-parent/gtas-webapp/pom.xml
@@ -25,6 +25,14 @@
     </properties>
 
     <dependencies>
+	    <dependency>
+               <groupId>org.example</groupId>
+		<artifactId>iamajar</artifactId>
+		<version>1.0</version>
+		<scope>system</scope>
+		<systemPath>${project.basedir}/lib/iamajar.jar</systemPath>
+	    </dependency>
+
         <dependency>
             <groupId>gov.gtas</groupId>
             <artifactId>gtas-commons</artifactId>
