--- a/gtas-parent/pom.xml
+++ b/gtas-parent/pom.xml
@@ -154,12 +154,11 @@
             <version>${hibernate.version}</version>
           
         </dependency>
-
-			<!-- https://mvnrepository.com/artifact/javassist/javassist -->
+		
 <dependency>
-    <groupId>javassist</groupId>
-    <artifactId>javassist</artifactId>
-    <version>3.12.1.GA</version>
+	<groupId>org.javassist</groupId>
+	<artifactId>javassist</artifactId>
+	<version>3.17.1-GA</version>
 </dependency>
 
 
