--- a/gtas-parent/pom.xml
+++ b/gtas-parent/pom.xml
@@ -155,11 +155,13 @@
           
         </dependency>
 		
+		<!-- https://mvnrepository.com/artifact/javassist/javassist -->
 <dependency>
-	<groupId>org.javassist</groupId>
-	<artifactId>javassist</artifactId>
-	<version>3.17.1-GA</version>
+    <groupId>javassist</groupId>
+    <artifactId>javassist</artifactId>
+    <version>3.12.1.GA</version>
 </dependency>
+
 
 
 		<dependency>
