--- a/gtas-parent/gtas-commons/pom.xml
+++ b/gtas-parent/gtas-commons/pom.xml
@@ -35,6 +35,18 @@
 		<hibernate.connection.password>admin</hibernate.connection.password>
 
 	</properties>
+	
+	
+    <dependencyManagement>
+        <dependencies>
+		<dependency>
+		    <groupId>javassist</groupId>
+		    <artifactId>javassist</artifactId>
+		    <version>3.12.1.GA</version>
+		</dependency>
+        </dependencies>
+    </dependencyManagement>
+	
 	<dependencies>
 		<dependency>
 			<groupId>wco-gtas</groupId>
