--- a/gtas-parent/gtas-commons/pom.xml
+++ b/gtas-parent/gtas-commons/pom.xml
@@ -49,6 +49,11 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.17.1-GA</version>
+		</dependency>
+		<dependency>
 			<groupId>wco-gtas</groupId>
 			<artifactId>gtas-information-share</artifactId>
 			<version>0.1-SNAPSHOT</version>
