--- a/gtas-parent/gtas-commons/pom.xml
+++ b/gtas-parent/gtas-commons/pom.xml
@@ -49,6 +49,12 @@
 	
 	<dependencies>
 		<dependency>
+			<groupId>javax.xml.ws</groupId>
+			<artifactId>jaxws-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.17.1-GA</version>
@@ -337,7 +343,7 @@
 		<dependency>
 			<groupId>com.sun.xml.ws</groupId>
 			<artifactId>jaxws-ri</artifactId>
-			<version>2.3.1</version>
+			<version>4.0.0</version>
 			<type>pom</type>
 		</dependency>
 
